About section completed

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,7 +1,8 @@
 header {
-  height: 100vh;
+  height: 80vh;
   padding-top: 7rem;
   overflow: hidden;
+  align-content: center;
 }
 
 .header__container {
@@ -47,6 +48,7 @@ header {
   border-radius: 12rem 12rem 0 0;
   overflow: hidden;
   padding: 5rem 1.5rem 1.5rem;
+  place-items: center;
 }
 
 /* Scoll down */
@@ -72,6 +74,22 @@ header {
   header {
     height: 100vh;
   }
+  .me {
+    margin-left: 1.5vh;
+  }
+
+  h1,
+  h5 {
+    margin-left: 2vh;
+  }
+
+  h5 {
+    margin-top: -2vh;
+  }
+  .cta {
+    margin-left: 2vh;
+  }
+
   .header__socials,
   .scroll__down {
     display: none;
