--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,7 @@
   --containter-width-md: 86%;
   --containterwidth-ms: 90%;
 
-  --transtition: all 400ms ease;
+  --transition: all 400ms ease;
 }
 
 html {
